option java_package = "com.pureland.common.protocal";
option java_outer_classname = "CampReqProtocal";

message CampReq {
  required int64 userId 		=1;
}
